# micro-service-application

./: README.md  all_service_run.sh  command.sh
Docker/: README.md  command.sh
admin_service/: .dockerignore  .env.dev  .env.example  .env.prod  .env.stage  .gitignore  AdminService.sln  Dockerfile  README.md  command.sh
application-utilities-setup/: README.md
auth_service/: .dockerignore  .env.dev  .env.example  .env.prod  .env.stage  Dockerfile  README.md  command.sh  credentials.json  pyproject.toml  requirements.txt
auth_service/app/: main.py  preflight.py
auth_service/app/config/: __init__.py  settings.py
auth_service/app/domain/: events.py  s3_keys.py  schemas.py
auth_service/app/health/: service.py
auth_service/app/http/: docs.py  errors.py  middleware.py  responses.py
auth_service/app/http/routes/: admin.py  auth.py  system.py
auth_service/app/kafka/: client.py
auth_service/app/logging/: logger.py  mongo.py
auth_service/app/observability/: apm.py  elastic.py
auth_service/app/persistence/: postgres.py
auth_service/app/redis/: client.py
auth_service/app/s3/: client.py
auth_service/app/security/: dependencies.py  passwords.py  tokens.py
auth_service/app/services/: auth.py  bootstrap.py
auth_service/app/utils/: ids.py  redaction.py  time.py
auth_service/migrations/: 001_auth_schema.sql  env.py
auth_service/migrations/versions/: 001_initial_auth_schema.py
auth_service/scripts/: validate_env_contract.py
auth_service/tests/: auth_service_smoke_test.sh  test_contracts.py  test_env_contract.py  test_jwt.py  test_routes.py
(+524 files in other folders)
