[project]
name = "auth-service"
version = "1.0.0"
description = "Canonical FastAPI auth_service for the unified microservice application"
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
